--- a/mRapidMFToHadoop/Dockerfile
+++ b/mRapidMFToHadoop/Dockerfile
@@ -17,5 +17,5 @@ COPY mRapidMFToHadoop-0.0.1-SNAPSHOT.jar D:\Jar
 VOLUME /mRapidMFToHadoop/target/
 
 EXPOSE 4567 
-ENTRYPOINT ["java", "-jar", "target/mRapidMFToHadoop-0.0.1-SNAPSHOT.jar"]
+#ENTRYPOINT ["java", "-jar", "target/mRapidMFToHadoop-0.0.1-SNAPSHOT.jar"]
 CMD ["/usr/lib/jvm/java-8-openjdk-amd64/bin/java", "-jar", "target/mRapidMFToHadoop-0.0.1-SNAPSHOT.jar"]
