--- a/mRapidMFToHadoop/pom.xml
+++ b/mRapidMFToHadoop/pom.xml
@@ -91,8 +91,8 @@
 				<configuration>
 				  <archive>
 					<manifest>
-						<!--  <mainClass>com.capgemini.mf2hadoop.Mf2HadoopHDFS</mainClass>-->
-						<mainClass>com.capgemini.mf2hadoop.Mf2HadoopHIVE</mainClass>
+						<mainClass>com.capgemini.mf2hadoop.Mf2HadoopHDFS</mainClass>
+						<!--  <mainClass>com.capgemini.mf2hadoop.Mf2HadoopHIVE</mainClass>-->
 						<classpathPrefix>dependency-jars/</classpathPrefix>
 					</manifest>
 				  </archive>
