--- a/mRapidMFToHadoop/pom.xml
+++ b/mRapidMFToHadoop/pom.xml
@@ -3,71 +3,27 @@
   <groupId>mRapidMFToHadoop</groupId>
   <artifactId>mRapidMFToHadoop</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>Data_Ingestion_Framework</name>
-  <packaging>jar</packaging>
   
-   <dependencies>
+  <dependencies>
 <dependency>
     <groupId>commons-io</groupId>
     <artifactId>commons-io</artifactId>
     <version>2.4</version>
 </dependency>
 
-</dependencies> 
+</dependencies>
   
   <build>
-  
-  <plugins>
-  <!-- download source code in Eclipse, best practice -->
-  <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.9</version>
-				<configuration>
-				<downloadSources>true</downloadSources>
-				<downloadJavadocs>false</downloadJavadocs>
-				</configuration>
-	</plugin>
-			
-    <plugin>
-      <!-- Build an executable JAR -->
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-jar-plugin</artifactId>
-      <version>2.4</version>
-      <configuration>
-        <archive>
-          <manifest>
-            <addClasspath>true</addClasspath>
-             <mainClass>com.capgemini.mf2hadoop.Mf2HadoopHDFS</mainClass>
-            <classpathPrefix>dependency-jars/</classpathPrefix>
-          </manifest>
-          <manifestEntries>
-			 <Class-Path>.</Class-Path>
-		  </manifestEntries>
-        </archive>
-      </configuration>
-    </plugin>
-    
-    <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.5.1</version>
-				<executions>
-				  <execution>
-					<id>copy-dependencies</id>
-					<phase>package</phase>
-					<goals>
-						<goal>copy-dependencies</goal>
-        			</goals>
-					<configuration>
-					  <!-- exclude junit, we need runtime dependency only -->
-					  <includeScope>runtime</includeScope>
-					  <outputDirectory>${project.build.directory}/dependency-jars/</outputDirectory>
-					</configuration>
-				  </execution>
-				</executions>
-			</plugin>
-  </plugins>
-  
-</build>
+    <sourceDirectory>src</sourceDirectory>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source/>
+          <target/>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
