--- a/mRapidMFToHadoop/Dockerfile
+++ b/mRapidMFToHadoop/Dockerfile
@@ -14,9 +14,9 @@ COPY . ./
 COPY mRapidMFToHadoop-0.0.1-SNAPSHOT.jar D:\Jar
 
 #You could use volumes to put a file in the container in runtime
-VOLUME /mRapidMFToHadoop/target/
+#VOLUME /mRapidMFToHadoop/target/
 
 EXPOSE 4567 
 ENTRYPOINT ["/usr/lib/jvm/java-8-openjdk-amd64/bin/java", "-jar", "mRapidMFToHadoop-0.0.1-SNAPSHOT.jar"]
 #CMD ["/usr/lib/jvm/java-8-openjdk-amd64/bin/java", "-jar", "mRapidMFToHadoop-0.0.1-SNAPSHOT.jar"]
-CMD ["cpybook_mf_ebcdic_data.txt","mf_ebcdic_data_file1.txt","D:\Users\ckanetka\Desktop\New folder (3)\mf.txt"]
+CMD ["cpybook_mf_ebcdic_data.txt","mf_ebcdic_data_file1.txt","D:\Users\ckanetka\Desktop\mf.txt"]
